# docs/swagger.json
@@ -7,22 +7,6 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/ping": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "测试Ping",
-                "responses": {
-                    "0": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/changePassword": {
             "post": {
                 "consumes": [
