# internal/routers/sys_base.go
@@ -1,15 +1,14 @@
 package routers
 
 import (
-	"github.com/gin-gonic/gin"
 	api "github.com/WuLianN/go-toy/api"
+	"github.com/gin-gonic/gin"
 )
 
 func InitBaseRouter(Router *gin.RouterGroup) {
 	baseApi := api.ApiGroupApp.BaseApi
 	uploadApi := api.NewUpload()
 	{
-		Router.GET("/ping", baseApi.Ping)
 		Router.POST("/login", baseApi.Login)
 		Router.POST("/register", baseApi.Register)
 		Router.POST("/upload/file", uploadApi.UploadFile)
